# Birch

./: .cirrus.yml  .codecov.yml  .cproject  .gitignore  .gitmodules  .project  .travis.makefile  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS.md  Doxyfile  Eclipse Instructions.md  MANIFEST  META.json  META.md  Makefile  Makefile.am  README.md  VERSION.md  autogen.sh  configure.ac  make_parsers.sh  mkdocs.makefile  mkdocs.yml  run.sh  time.sh
.circleci/: Dockerfile  (+1 more)
birch/: .gitignore  Doxyfile  Makefile.am  PKGBUILD  birch.rb  birch.spec  configure.ac  smoke.sh
birch/debian/: changelog  control  rules
birch/eclipse/: custom_code_style.xml
birch/share/: Makefile.am  README.md  birch.yml  configure.ac  hello.birch  mkdocs.yml
birch/src/: birch.cpp  birch.hpp  parser.ypp
birch/src/common/: Annotated.cpp  Based.cpp  Braced.cpp  Conditioned.cpp  Conditioned.hpp  Couple.cpp  Located.hpp  Name.hpp  Named.cpp  Numbered.cpp  Numbered.hpp  Parameterised.hpp  ReturnTyped.cpp  Single.hpp  TypeArgumented.cpp  TypeArgumented.hpp  Typed.cpp  Valued.hpp
birch/src/exception/: DriverException.cpp  DriverException.hpp  FileNotFoundException.cpp
birch/src/expression/: Assign.cpp  BinaryCall.cpp  Call.cpp  Cast.hpp  ExpressionIterator.cpp  ExpressionIterator.hpp  ExpressionList.cpp  Generic.hpp  Get.cpp  Global.hpp  LambdaFunction.cpp  Literal.cpp  Literal.hpp  Member.cpp  NamedExpression.hpp  Parameter.hpp  Parentheses.cpp  Query.hpp  Range.hpp  Sequence.cpp  Sequence.hpp  Slice.cpp  Span.cpp  Super.hpp  UnaryCall.hpp
birch/src/generate/: BirchGenerator.cpp  BirchGenerator.hpp  CppClassGenerator.cpp  CppClassGenerator.hpp  CppGenerator.cpp  CppGenerator.hpp  CppPackageGenerator.cpp  CppPackageGenerator.hpp  CppStructGenerator.cpp  IndentableGenerator.cpp  MarkdownGenerator.cpp  MarkdownGenerator.hpp
birch/src/primitive/: inherits.hpp  poset.hpp  string.cpp  string.hpp
birch/src/statement/: Assert.hpp  AssignmentOperator.cpp  Basic.cpp  Block.hpp  Braces.hpp  DoWhile.hpp  EmptyStatement.cpp  EmptyStatement.hpp  ExpressionStatement.hpp  Factor.cpp  File.cpp  For.hpp  Function.hpp  GlobalVariable.cpp  GlobalVariable.hpp  If.cpp  If.hpp  LocalVariable.hpp  MemberFunction.cpp  MemberFunction.hpp  MemberPhantom.cpp  MemberVariable.cpp  MemberVariable.hpp  Package.cpp  Package.hpp  Parallel.cpp  Program.hpp  Raw.cpp  Return.cpp  SliceOperator.cpp  SliceOperator.hpp  Statement.hpp  StatementIterator.hpp  TupleVariable.hpp  UnaryOperator.hpp  While.hpp  all.hpp
birch/src/type/: ArrayType.hpp  DeducedType.cpp  DeducedType.hpp  EmptyType.cpp  FutureType.cpp  FutureType.hpp  MemberType.cpp  OptionalType.cpp  TupleType.cpp  Type.hpp  TypeIterator.hpp  TypeList.cpp  TypeList.hpp
birch/src/visitor/: Gatherer.hpp  Visitor.cpp  all.hpp
driver/: .cproject  .gitignore  Doxyfile  Makefile.am  README.md  configure.ac  smoke.sh  version.sh
driver/bi/: birch.cpp  doxygen.hpp
driver/docs/: index.md  meta_file.md
driver/share/: META.json  Makefile.am  README.md  birch.yml  configure.ac  gitignore  mkdocs.yml  standalone.cpp
driver/src/: birch.cpp  birch.hpp  doxygen.hpp  lexer.hpp  lexer.lpp  parser.ypp
libbirch/: .gitignore  Allocation.cpp  Allocation.hpp  AllocationMap.cpp  AllocationMap.hpp  Allocator.hpp  Any.cpp  Any.hpp  Array.hpp  Atomic.hpp  Buffer.hpp  Clone.hpp  Cloner.hpp  Collector.hpp  Context.hpp  ContextPtr.hpp  Copier.cpp  Copier.hpp  Counted.cpp  Counted.hpp  Discarder.hpp  Doxyfile  EagerAny.cpp  EagerAny.hpp  EagerContext.cpp  EagerContext.hpp  EagerLabel.cpp  EagerLabel.hpp  EagerMemo.cpp  EagerMemo.hpp  EagerPtr.hpp  Eigen.hpp  EigenFunctions.hpp  EigenOperators.hpp  Enter.hpp  EnterClone.hpp  EntryExitLock.hpp  ExclusiveLock.cpp  ExclusiveLock.hpp  ExitBarrierLock.hpp  (+122 more)
libbirch/libbirch/: Any.cpp  Any.hpp  Array.hpp  ArrayControl.hpp  ArrayIterator.hpp  ArrayShape.hpp  Atomic.hpp  BiconnectedCollector.cpp  BiconnectedCollector.hpp  BiconnectedCopier.cpp  BiconnectedCopier.hpp  BiconnectedMemo.cpp  BiconnectedMemo.hpp  BridgeRankRestorer.hpp  Bridger.cpp  Bridger.hpp  Buffer.hpp  Collector.cpp  Collector.hpp  Copier.cpp  Copier.hpp  Destroyer.hpp  Dimension.hpp  Eigen.hpp  EigenFunctions.hpp  EigenOperators.hpp  Fiber.hpp  Finisher.hpp  Freezer.hpp  Handler.hpp  Index.hpp  Inplace.hpp  Iterator.hpp  Label.hpp  LabelPtr.cpp  Lazy.hpp  Lock.hpp  MarkClaimToucher.hpp  Marker.cpp  Marker.hpp  (+35 more)
membirch/: Doxyfile  Makefile.am  PKGBUILD  README.md  configure.ac  membirch.rb  membirch.spec
membirch/debian/: changelog  control  libmembirch-0.0.0.install  membirch-dev.install  membirch-dev.links  rules
membirch/membirch/: Any.cpp  Any.hpp  Atomic.hpp  BiconnectedCollector.cpp  BiconnectedCollector.hpp  BiconnectedCopier.cpp  BiconnectedCopier.hpp  BiconnectedMemo.cpp  BiconnectedMemo.hpp  Bridger.cpp  Bridger.hpp  Collector.cpp  Collector.hpp  Copier.cpp  Copier.hpp  Destroyer.hpp  Marker.cpp  Marker.hpp  Memo.cpp  Memo.hpp  Reacher.cpp  Reacher.hpp  Scanner.cpp  Scanner.hpp  Shared.hpp  Spanner.cpp  Spanner.hpp  docs.hpp  external.hpp  internal.hpp  macro.hpp  membirch.hpp  memory.cpp  memory.hpp  mutable.hpp  thread.hpp  type.hpp
numbirch/: .gitignore  CONTRIBUTING.md  Doxyfile  DoxygenLayout.xml  Makefile.am  PKGBUILD  README.md  configure.ac  dpcpp_wrapper  install_cuda_prereq  numbirch.rb  numbirch.spec  nvcc_wrapper
numbirch/debian/: changelog  control  libnumbirch-0.0.0.install  libnumbirch-cuda-0.0.0.install  numbirch-cuda-dev.install  numbirch-cuda-dev.links  numbirch-dev.install  numbirch-dev.links  rules
numbirch/docs/: custom.css  footer.html  header.html
numbirch/numbirch/: array.hpp  binary.hpp  core.cpp  core.hpp  core_default.cpp  core_oneapi.cpp  docs.hpp  function.cpp  function.hpp  functor.hpp  macro.hpp  memory.hpp  numbirch.cpp  numbirch.hpp  numbirch_cuda.cpp  numbirch_default.cpp  numbirch_oneapi.cpp  numeric.cpp  numeric.hpp  random.hpp  reduce.hpp  ternary.hpp  transform.hpp  type.hpp  unary.hpp  utility.hpp
share/: MANIFEST  META.json  META.md  Makefile  Makefile.am  README.md  common.am  configure.ac  gitignore  precompile.hpp
(+5180 files in other folders)
